[package]
name = "lib_broker"
version = "0.1.0"
edition = "2021"
authors = ["Indrit Zeqiri <indrit.zeqiri@gmail.com>"]
description = "A portable message mediator library with optional logging and OS-specific features built mainly for pgshield"
license = "Apache-2.0"
repository = "https://github.com/pgshield/lib_broker"
keywords = ["broker", "messaging", "portable", "ffi", "logging"]
categories = ["asynchronous", "network-programming", "api-bindings"]

[lib]
name = "lib_broker"
crate-type = ["dylib"]

[dependencies]
once_cell = "1.17.1"
thiserror = "1.0.40"
async-trait = "0.1.68"
tokio = { version = "1.28.0", features = ["full"] }
cfg-if = "1.0"
lazy_static = "1.4"
libc = "0.2.155"
serde_json = "1.0.118"

# Optional dependencies
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
tracing-appender = { version = "0.2", optional = true }
syslog = { version = "6.0", optional = true }
lapin = { version = "2.1", optional = true }
rdkafka = { version = "0.29", optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["debugapi"], optional = true }

[features]
default = []
file_logger = ["tracing", "tracing-subscriber", "tracing-appender"]
windows_debug = ["winapi"]
linux_syslog = ["syslog"]
rabbitmq = ["lapin"]
kafka = ["rdkafka"]
